--- a/reactjs/components/moleculas/Header/Search/_style.scss
+++ b/reactjs/components/moleculas/Header/Search/_style.scss
@@ -47,10 +47,6 @@
     }
 
     .icon {
-      @include media-breakpoint-up(md) {
-        position: relative;
-        top: 5px;
-      }
       @include media-breakpoint-up(lg) {
         width: auto;
         height: 24px;
